# splunksage

./: .env.example  .gitignore  LICENSE  README.md  architecture_diagram.md  debug_login.py  demo.py  install_license.py  probe.py  probe_licenser.py  pyproject.toml  test_connection.py
src/splunk_sage/: __init__.py  config.py  server.py  splunk_client.py
tests/: test_tools.py
