[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunksage"
version = "0.1.0"
description = "SplunkSage — AI-powered natural language interface to Splunk via MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["splunk", "mcp", "ai", "observability", "devops"]
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
splunksage = "splunk_sage.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/splunk_sage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
